Implementing some room database classes

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -12,7 +12,7 @@
 
     <item
         android:id="@+id/delete"
-        android:icon="@drawable/ic_add"
+        android:icon="@drawable/ic_baseline_delete_forever_24"
         android:title="Delete task"/>
 
 </menu>
