--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -8,44 +8,44 @@
 
 
     <EditText
-        android:id="@+id/etNewTask"
+        android:id="@+id/etEditTask"
+        android:text="Task"
         android:layout_width="340dp"
         android:layout_height="55dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:background="#f1f1f1"
-        android:hint=" Task title"
         android:inputType="textAutoComplete"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="26dp"
         tools:layout_editor_absoluteY="27dp" />
 
     <EditText
-        android:id="@+id/etDescription"
+        android:id="@+id/etEditDescription"
         android:layout_width="340dp"
         android:layout_height="55dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:background="#f1f1f1"
-        android:hint=" Task description"
+        android:hint=" Edit description"
         android:inputType="textAutoComplete"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="26dp"
         tools:layout_editor_absoluteY="104dp" />
 
     <TextView
-        android:id="@+id/tvDate"
+        android:id="@+id/tvEditDate"
         android:layout_width="340dp"
         android:layout_height="55dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:background="#f1f1f1"
-        android:hint=" Pick the task date"
+        android:hint=" Edit date"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="26dp"
         tools:layout_editor_absoluteY="184dp" />
 
-    <TextView
+    <ImageView
         android:id="@+id/cal"
         android:layout_width="34dp"
         android:layout_height="29dp"
@@ -60,12 +60,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
         android:backgroundTint="#FDC783"
-        android:text="Save task"
+        android:text="Confirm edit"
         android:textColor="#000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.455"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNewTask" />
+        app:layout_constraintTop_toBottomOf="@+id/etEditTask" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
