--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,22 +1,47 @@
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvTask"
-        android:hint="Task title"
-        style="@style/word_title"
-        android:layout_width="match_parent"
+    <CheckBox
+        android:id="@+id/checkbox"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_light" />
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp" />
 
-    <TextView
-        android:id="@+id/tvDate"
+    <EditText
+        android:id="@+id/tvTaskTitle"
         style="@style/word_title"
-        android:hint="Task date"
-        android:layout_width="match_parent"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_light" />
-</LinearLayout>
+        android:layout_alignTop="@+id/checkbox"
+        android:layout_marginStart="-10dp"
+        android:layout_toEndOf="@+id/checkbox"
+        android:background="@android:color/holo_orange_light"
+        android:hint="Task title" />
+
+    <EditText
+        android:id="@+id/tvDesc"
+        style="@style/word_title"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/checkbox"
+        android:layout_marginStart="-10dp"
+        android:layout_marginTop="30dp"
+        android:layout_toEndOf="@+id/checkbox"
+        android:background="@android:color/holo_orange_light"
+        android:hint="Task description" />
+
+    <EditText
+        android:id="@+id/tvDueDate"
+        style="@style/word_title"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/checkbox"
+        android:layout_marginStart="-10dp"
+        android:layout_marginTop="59dp"
+        android:layout_toEndOf="@+id/checkbox"
+        android:background="@android:color/holo_orange_light"
+        android:hint="Task due date" />
+</RelativeLayout>
