--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">#EDFFB24F</item>
         <item name="colorPrimaryDark">#FF6E40</item>
         <item name="colorAccent">#FFD740</item>
-        <item name="colorPrimarySurface">#FDC783</item>
+        <item name="colorPrimarySurface">#C6C6C6</item>
     </style>
 
     <style name="word_title">
