--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="28dp"
         android:background="#f1f1f1"
-        android:hint="Today's date is:"
+        android:text="Today's date is: "
         android:inputType="textAutoComplete"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/etNewTask"
