--- a/app/src/main/res/layout/fragment_update_del.xml
+++ b/app/src/main/res/layout/fragment_update_del.xml
@@ -7,7 +7,7 @@
     tools:context=".UpdateDelFragment">
 
     <TextView
-        android:id="@+id/currentDate"
+        android:id="@+id/currentDate1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="center"
@@ -19,14 +19,14 @@
         android:hint="Today's date is:"
         android:inputType="textAutoComplete"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/etNewTask"
+        app:layout_constraintBottom_toTopOf="@+id/etNewTask1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/etNewTask"
+        android:id="@+id/etNewTask1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="center"
@@ -37,14 +37,14 @@
         android:hint=" Task title"
         android:inputType="textAutoComplete"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/etDescription"
+        app:layout_constraintBottom_toTopOf="@+id/etDescription1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currentDate"
+        app:layout_constraintTop_toBottomOf="@+id/currentDate1"
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/etDescription"
+        android:id="@+id/etDescription1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="center"
@@ -58,11 +58,11 @@
         app:layout_constraintBottom_toTopOf="@+id/cal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNewTask"
+        app:layout_constraintTop_toBottomOf="@+id/etNewTask1"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/tvDate"
+        android:id="@+id/tvDate1"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_gravity="center"
@@ -72,10 +72,9 @@
         android:layout_marginBottom="30dp"
         android:hint="   Pick the task date:"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDescription"
+        app:layout_constraintTop_toBottomOf="@+id/etDescription1"
         tools:ignore="MissingConstraints" />
 
 
@@ -83,13 +82,12 @@
         android:id="@+id/cal"
         android:layout_width="35dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="21dp"
         android:layout_marginBottom="43dp"
         android:background="@drawable/ic_calendar"
         app:layout_constraintBottom_toTopOf="@+id/editBtn"
-        app:layout_constraintEnd_toEndOf="@+id/tvDate"
-        app:layout_constraintTop_toBottomOf="@+id/etDescription"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/etDescription1"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="325dp" />
 
     <Button
         android:id="@+id/editBtn"
