--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -8,39 +9,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="10dp" />
+        android:layout_marginStart="0dp" />
 
-    <EditText
+
+
+    <TextView
         android:id="@+id/tvTaskTitle"
         style="@style/word_title"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/checkbox"
-        android:layout_marginStart="-10dp"
+        android:layout_marginStart="-8dp"
         android:layout_toEndOf="@+id/checkbox"
         android:background="@android:color/holo_orange_light"
         android:hint="@string/task_title" />
 
-    <EditText
+    <TextView
         android:id="@+id/tvDesc"
         style="@style/word_title"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/checkbox"
-        android:layout_marginStart="-10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="-8dp"
+        android:layout_marginTop="28dp"
         android:layout_toEndOf="@+id/checkbox"
         android:background="@android:color/holo_orange_light"
         android:hint="@string/task_description" />
 
-    <EditText
+    <TextView
         android:id="@+id/tvDueDate"
         style="@style/word_title"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/checkbox"
-        android:layout_marginStart="-10dp"
-        android:layout_marginTop="59dp"
+        android:layout_marginStart="-8dp"
+        android:layout_marginTop="57dp"
         android:layout_toEndOf="@+id/checkbox"
         android:background="@android:color/holo_orange_light"
         android:hint="@string/task_due_date" />
