--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,7 +25,7 @@
             app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_mainActivity_to_editTask_Fragment"
-            app:destination="@id/editTask_Fragment" />
+            app:destination="@id/todayTask_Fragment" />
         <action
             android:id="@+id/action_mainActivity_to_infoFragment"
             app:destination="@id/infoFragment" />
@@ -46,7 +46,7 @@
             app:destination="@id/mainActivity" />
     </fragment>
     <fragment
-        android:id="@+id/editTask_Fragment"
+        android:id="@+id/todayTask_Fragment"
         android:name="com.marah.test_todo.ThirdFragment"
         android:label="fragment_third"
         tools:layout="@layout/fragment_third" >
@@ -67,6 +67,9 @@
         <action
             android:id="@+id/action_updateDelFragment_to_mainActivity"
             app:destination="@id/mainActivity" />
+        <argument
+            android:name="myTask"
+            app:argType="com.marah.test_todo.Task" />
     </fragment>
 
 </navigation>
