Basic features done, but prevent user to edit after passing due date feature left, I'm working on it...

--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -4,8 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UpdateDelFragment">
+    android:background="@drawable/bakk"
+    tools:context=".UpdateFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:listitem="@layout/recyclerview_item"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <!--
     <TextView
         android:id="@+id/currentDate"
         android:layout_width="0dp"
@@ -55,7 +67,6 @@
         android:hint=" Task description"
         android:inputType="textAutoComplete"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/cal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNewTask"
@@ -79,18 +90,17 @@
 
 
     <ImageButton
-        android:id="@+id/cal"
+        android:id="@+id/cal0"
         android:layout_width="35dp"
         android:layout_height="40dp"
         android:layout_marginBottom="43dp"
         android:background="@drawable/ic_calendar"
-        app:layout_constraintBottom_toTopOf="@+id/editBtn"
         app:layout_constraintTop_toBottomOf="@+id/etDescription"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="325dp" />
 
     <Button
-        android:id="@+id/editBtn"
+        android:id="@+id/editBtn0"
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="301dp"
@@ -101,10 +111,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.891"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cal" />
+       />
 
     <Button
-        android:id="@+id/delBtn"
+        android:id="@+id/delBtn0"
         android:layout_width="154dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="301dp"
@@ -115,7 +125,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.124"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cal"
-        app:layout_constraintVertical_bias="1.0" />
+
+        app:layout_constraintVertical_bias="1.0" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
