--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -5,32 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:background="@drawable/ic_baseline_perm_device_information_24"
     tools:context=".InfoFragment">
 
 
     <TextView
-        android:id="@+id/tv1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="183dp"
-        android:layout_marginBottom="17dp"
-        android:padding="18sp"
-        android:text="This application is to manage your important tasks with the ability to add, modify and delete any future tasks, for any suggestions please contact at: "
-        android:textAlignment="center"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/tv2"
-        android:layout_width="350dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginBottom="312dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="184dp"
+        android:background="#8B6E6E6E"
         android:text="Marah.Bossi.jed.k1@tuwaiq.edu.sa"
         android:textAlignment="center"
         android:textColor="#536DFE"
@@ -39,5 +24,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv1" />
+
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="243dp"
+        android:layout_marginBottom="17dp"
+        android:background="#8B6E6E6E"
+        android:padding="18sp"
+        android:text="This application is to manage your important tasks with the ability to add, modify and delete any future tasks, for any suggestions please contact at: "
+        android:textAlignment="center"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
