--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,22 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondFragment">
+    android:background="@drawable/bakk"
+    tools:context=".AddFragment">
 
     <TextView
         android:id="@+id/currentDate"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="371dp"
+        android:layout_height="53dp"
         android:layout_gravity="center"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="33dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="28dp"
-        android:background="#f1f1f1"
-        android:text="Today's date is: "
+        android:layout_marginTop="36dp"
+        android:background="#BEBFBDBD"
         android:inputType="textAutoComplete"
+        android:text="Today's date is: "
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/etNewTask"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,17 +24,14 @@
 
     <EditText
         android:id="@+id/etNewTask"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="371dp"
+        android:layout_height="54dp"
         android:layout_gravity="center"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="39dp"
-        android:background="#f1f1f1"
+        android:layout_marginTop="28dp"
+        android:background="#BEBFBDBD"
         android:hint=" Task title"
         android:inputType="textAutoComplete"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/etDescription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currentDate"
@@ -45,17 +39,14 @@
 
     <EditText
         android:id="@+id/etDescription"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="371dp"
+        android:layout_height="53dp"
         android:layout_gravity="center"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="39dp"
-        android:background="#f1f1f1"
+        android:layout_marginTop="28dp"
+        android:background="#BEBFBDBD"
         android:hint=" Task description"
         android:inputType="textAutoComplete"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/cal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNewTask"
@@ -63,46 +54,45 @@
 
     <TextView
         android:id="@+id/tvDate"
-        android:layout_width="0dp"
+        android:layout_width="371dp"
         android:layout_height="55dp"
         android:layout_gravity="center"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="36dp"
+        android:background="#BEBFBDBD"
         android:hint="   Pick the task date:"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDescription"
         tools:ignore="MissingConstraints" />
 
-
     <ImageButton
         android:id="@+id/cal"
         android:layout_width="35dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="43dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/ic_calendar"
         app:layout_constraintBottom_toTopOf="@+id/saveBtn"
         app:layout_constraintEnd_toEndOf="@+id/tvDate"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDescription"
+        app:layout_constraintVertical_bias="0.333"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/saveBtn"
         android:layout_width="154dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="301dp"
-        android:backgroundTint="#FDC783"
+        android:layout_marginTop="56dp"
+        android:backgroundTint="#536DFE"
         android:text="Add task"
         android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cal" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDate"
+        app:layout_constraintVertical_bias="0.086" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
