--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -12,6 +12,15 @@
         android:layout_marginStart="0dp" />
 
 
+    <ImageButton
+        android:id="@+id/deleteBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_baseline_delete_outline_24"
+        android:elevation="1dp"
+        android:layout_marginTop="25sp"
+        android:layout_marginStart="350dp"
+        android:src="@drawable/ic_baseline_delete_outline_24" />
 
     <TextView
         android:id="@+id/tvTaskTitle"
@@ -21,8 +30,8 @@
         android:layout_alignTop="@+id/checkbox"
         android:layout_marginStart="-8dp"
         android:layout_toEndOf="@+id/checkbox"
-        android:background="@android:color/holo_orange_light"
-        android:hint="@string/task_title" />
+        android:hint="@string/task_title"
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/tvDesc"
@@ -33,7 +42,7 @@
         android:layout_marginStart="-8dp"
         android:layout_marginTop="28dp"
         android:layout_toEndOf="@+id/checkbox"
-        android:background="@android:color/holo_orange_light"
+
         android:hint="@string/task_description" />
 
     <TextView
@@ -45,6 +54,5 @@
         android:layout_marginStart="-8dp"
         android:layout_marginTop="57dp"
         android:layout_toEndOf="@+id/checkbox"
-        android:background="@android:color/holo_orange_light"
         android:hint="@string/task_due_date" />
 </RelativeLayout>
