--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -2,16 +2,16 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="colorPrimary">#EDFFB24F</item>
-        <item name="colorPrimaryDark">#FF6E40</item>
-        <item name="colorAccent">#FFD740</item>
+        <item name="colorPrimary">#CB40C4FF</item>
+        <item name="colorPrimaryDark">#536DFE</item>
+        <item name="colorAccent">#7E448AFF</item>
         <item name="colorPrimarySurface">#C6C6C6</item>
     </style>
 
     <style name="word_title">
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:paddingLeft">8dp</item>
-        <item name="android:background">@android:color/holo_orange_light</item>
+        <item name="android:background">#85448AFF</item>
         <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
     </style>
 
