--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -10,12 +10,13 @@
 
     <TextView
         android:id="@+id/tv2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="343dp"
+        android:layout_height="45dp"
         android:layout_marginStart="30dp"
+
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="184dp"
-        android:background="#8B6E6E6E"
+        android:background="#756E6E6E"
         android:text="Marah.Bossi.jed.k1@tuwaiq.edu.sa"
         android:textAlignment="center"
         android:textColor="#536DFE"
@@ -31,11 +32,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="243dp"
         android:layout_marginBottom="17dp"
-        android:background="#8B6E6E6E"
+        android:background="#756E6E6E"
         android:padding="18sp"
         android:text="This application is to manage your important tasks with the ability to add, modify and delete any future tasks, for any suggestions please contact at: "
         android:textAlignment="center"
         android:textSize="25sp"
+        android:textStyle="italic"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toTopOf="@+id/tv2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
