--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -28,6 +28,8 @@
 
     <EditText
         android:id="@+id/etNewTask"
+        android:editable="true"
+        android:enabled="true"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="center"
